--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
                     </li>
                 </div>    
                 <div class="list-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-return-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5"/>
-                    </svg>
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-return-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5"/>
+                        </svg>
+                    </div>
                     <li><h3>Startup Experience</h3> 
                         <ul>
                             <li><h4> CEO and Founder at SparkGate,</h4> <h5 style="color: grey;">2023-2024 </li></h5>
@@ -85,9 +87,11 @@
                     </li> 
                 </div>
                 <div class="list-1">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-return-right" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5"/>
-                    </svg>
+                    <div class="icon">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-return-right" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5"/>
+                        </svg>
+                    </div>
                     <li><h3>Education</h3>
                         <ul>
                             <li><h4>MA in Applied Economics, University
@@ -100,7 +104,7 @@
 
 <div class="container-4">
     <div class="header-4">
-        <h1 style="margin-bottom: 100px">Milestones That Define Me</h1>
+        <h1>Milestones That Define Me</h1>
     </div>
     <div class="grid-container">
         <div class="column1">
@@ -154,7 +158,7 @@
 
 <div class="container-5">
     <div class="header-5">
-        <h1 style="margin-bottom: 100px">Giving Back to Community</h1>
+        <h1>Giving Back to Community</h1>
     </div>
     <div class="grid-container-2">
         <div class="column1">
@@ -205,7 +209,7 @@
     </div>
     
     <div class="image-container">
-        <div class="rotated-oval"> 
+        <div class="oval-2"> 
             <img class="Coding-picture" src="./images/coder.jpg" alt="Coding's picture">
         </div>
     </div>
