--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
     <h1>Reach Out to Me </h1>
     <div class="list-container">
         <ul>
-            <div class="list-1">
+            <div class="list-1" style="margin-bottom: 50px;">
                 <div class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-return-right" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5"/>
                 </svg>
                 </div>
-                <a href="https://x.com/hre4anyk" style="color: lightblue;"><h3>Twitter</a></h3>
+                <a href="https://x.com/hre4anyk" style="color: aqua;"><h3>Twitter</a></h3>
             </div>    
             <div class="list-1">
                 <div class="icon">
@@ -233,19 +233,7 @@
                     <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5"/>
                 </svg>
                 </div>
-                <a href="https://www.linkedin.com/in/hrechanyk/" style="color: lightblue;"><h3>LinkedIn</a></h3>
-            </div>
-            <div class="list-1">
-                <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-arrow-return-right" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M1.5 1.5A.5.5 0 0 0 1 2v4.8a2.5 2.5 0 0 0 2.5 2.5h9.793l-3.347 3.346a.5.5 0 0 0 .708.708l4.2-4.2a.5.5 0 0 0 0-.708l-4-4a.5.5 0 0 0-.708.708L13.293 8.3H3.5A1.5 1.5 0 0 1 2 6.8V2a.5.5 0 0 0-.5-.5"/>
-                </svg>
-                </div>
-                <h3><li>Email
-                    <ul>
-                        <li><h4 style="color: grey;">hrechanyk11@gmail.com</li></h4>
-                    </ul>
-                </li></h3>
+                <a href="https://www.linkedin.com/in/hrechanyk/" style="color: aqua;"><h3>LinkedIn</a></h3>
             </div>
     </div>
 </div>
